--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -1,9 +1,9 @@
+sonar.login=73e09c9ceb149ae7957385502f61a3828246c0bb
+# sonar.projectKey=x23193689_super-market-cpp
+# sonar.organization=x23193689
+# sonar.sources=.
+# sonar.host.url=https://sonarcloud.io
 
-sonar.projectKey=x23193689_super-market-cpp
-sonar.organization=x23193689
-sonar.sources=.
-sonar.host.url=https://sonarcloud.io
-sonar.login=2dcbea78a4ccecf231ab067ce56559ca84d07c9e
 sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**,**/migrations/**,**/venv/**,sonar-scanner-**,**/migrations/**, **/__pycache__/**, **/*.pyc, **/static/**,**/settings.py, 
 
 # sonar-scanner \
